--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{{site.baseurl}}/assets/res/ms-icon-144x144.png">
     <meta name="theme-color" content="#009688">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
@@ -52,10 +53,11 @@
   </head>
   <body>
     <header>
-      <nav class="top-nav teal">
+      <nav class="top-nav grey darken-4">
         <div class="nav-wrapper">
           <div class="container">
-            <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a>
+            <!-- <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a> -->
+            <a class="page-title" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/res/grizzlybit.png" class="responsive-img" style="max-height: 30px;max-width: 30px">&nbsp;Grizzlybit<sub>&nbsp;Coder's Digest</sub></a>
           </div>
         </div>
       </nav>
