--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -34,8 +34,7 @@ header
     text-decoration: none
 
   .background
-    background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
-    background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+    background-color: #151515
 
 a
   &.button-collapse
@@ -56,7 +55,7 @@ nav
     font-size: 36px
     font-weight: bold
     line-height: 80px
-    font-family: "Lucida Console", Monaco, monospace
+    font-family: 'Roboto', sans-serif
 
 nav
   &.top-nav
