adding kendo components

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,10 @@
 {% include header.html %}
 
 <div class="container">
+    <div class="demo-section k-content">
+        <h4><label for="countries">Search</label></h4>
+        <input id="countries" style="width: 100%;" />
+    </div>
   {{ content }}
 </div>
 
