--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,6 +39,22 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    <script>
+      window.store = {
+        posts: [
+        {% for post in site.posts %}
+          {
+            "title": "{{ post.title | xml_escape }}",
+            "author": "{{ post.author | xml_escape }}",
+            "category": "{{ post.category | xml_escape }}",
+            "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+            "url": "{{ post.url | xml_escape }}"
+          }
+          {% unless forloop.last %},{% endunless %}
+        {% endfor %}
+        ]
+      };
+    </script>
     <script src="{{site.baseurl}}/assets/js/main.js"></script>
   </body>
 </html>
