--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 
     {% if site.author_bio and site.author_name %}
     <section class="widget widget-text">
-        <h2 class="widget-title">About {{ site.author_name }}</h2>
+        <img src="{{ site.baseurl }}/images/zubair_ahmed.jpg" width="200"><br>
         <p>{{ site.author_bio }}</p>
     </section><!-- .widget-text -->
     {% endif %}
