--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 
     {% if site.author_bio and site.author_name %}
     <section class="widget widget-text">
-        <img src="{{ site.baseurl }}/images/zubair_ahmed.jpg" width="200" style="box-shadow: 1px 2px 10px #000;"><br>
+        <img src="{{ site.baseurl }}/images/zubair_ahmed.jpg" width="200" style="padding: 10px;"><br>
         <p>{{ site.author_bio }}</p>
     </section>
     <!-- .widget-text -->
