--- a/css/main.scss
+++ b/css/main.scss
@@ -572,6 +572,7 @@ a.archive-top-link:hover {
 
 .post-navigation .nav-before,
 .post-navigation .nav-date {
+    color: #FFF;
     font-size: 12px;
     letter-spacing: 1px;
     margin-right: 240px;
