adding ad banner

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,17 @@
     <!-- .widget -->
     {% endif %} {% if site.banner_image %}
     <section class="widget widget-text">
-        <p><a href="{{ site.banner_url }}" target="_blank"><img src="{{ site.baseurl }}/{{ site.banner_image }}" alt="Optional Banner Ad" /></a></p>
+        <!-- <p><a href="{{ site.banner_url }}" target="_blank"><img src="{{ site.baseurl }}/{{ site.banner_image }}" alt="Optional Banner Ad" /></a></p> -->
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- TEST -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-5766744601171066"
+             data-ad-slot="8862972390"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </section>
     <!-- .widget-text-->
     {% endif %}
