adding a new post

--- a/_includes/image_caption.html
+++ b/_includes/image_caption.html
@@ -1,4 +1,4 @@
-<figure class="caption">
+<figure class="caption" style="padding-left:15%">
     <img src="{{ include.imageurl }}" alt="{{ include.title }}"/>
     {% if include.caption %}
     <figcaption class="caption-text">{{ include.caption }}</figcaption> 
