Truth about being a full-stack developer

--- a/_includes/image_caption.html
+++ b/_includes/image_caption.html
@@ -1,4 +1,4 @@
-<figure class="caption" style="padding-left:15%">
+<figure class="caption" style="margin: auto;width: 50%;padding-bottom: 15px;">
     <img src="{{ include.imageurl }}" alt="{{ include.title }}"/>
     {% if include.caption %}
     <figcaption class="caption-text">{{ include.caption }}</figcaption> 
