adding stackoverflow flair

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -62,6 +62,9 @@
         </div>
         <!-- .tagcloud -->
     </section>
+    <section class="widget widget-text">
+        <a href="https://stackexchange.com/users/4666342/zubair1024"><img src="https://stackexchange.com/users/flair/4666342.png" width="208" height="58" alt="profile for zubair1024 on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for zubair1024 on Stack Exchange, a network of free, community-driven Q&amp;A sites" /></a>
+    </section>
     <!-- .widget -->
 
 </aside>
